--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -681,8 +681,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Alle Fingerabdrücke entfernen?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"„<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ löschen"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Möchtest du diesen Fingerabdruck löschen?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Dadurch werden die Aufnahmen und das Modell des Fingerabdruck für „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ gelöscht, die auf deinem Gerät gespeichert sind."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Du kannst deinen Fingerabdruck dann nicht mehr verwenden, um dein Smartphone zu entsperren oder deine Identität in Apps zu bestätigen."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Dadurch werden die Aufnahmen und das Modell des Fingerabdrucks für „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ gelöscht, die auf deinem Smartphone gespeichert sind"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Dadurch werden die Aufnahmen und das Modell des Fingerabdrucks für „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ gelöscht, die auf deinem Tablet gespeichert sind"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Dadurch werden die Aufnahmen und das Modell des Fingerabdruck für „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ gelöscht, die auf deinem Gerät gespeichert sind."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Du kannst deinen Fingerabdruck dann nicht mehr verwenden, um dein Smartphone zu entsperren oder deine Identität in Apps zu bestätigen."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Du kannst deinen Fingerabdruck dann nicht mehr verwenden, um dein Tablet zu entsperren oder deine Identität in Apps zu bestätigen."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Du kannst deinen Fingerabdruck dann nicht mehr verwenden, um dein Gerät zu entsperren oder deine Identität in Apps zu bestätigen."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Du kannst deinen Fingerabdruck dann nicht mehr verwenden, um dein Arbeitsprofil zu entsperren, Käufe zu autorisieren oder dich in geschäftlichen Apps anzumelden."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Ja, entfernen"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Verschlüsselung"</string>
@@ -1390,7 +1394,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"An"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"An – gesichtsbasiert"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Gesichtserkennung"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Das Display wechselt automatisch zwischen Hoch- und Querformat, wenn du das Smartphone drehst"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Das Display wechselt automatisch zwischen Hoch- und Querformat, wenn du das Smartphone drehst"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Das Display wechselt automatisch zwischen Hoch- und Querformat, wenn du das Tablet drehst"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Weitere Informationen zum automatischen Drehen"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Wenn du das Smartphone drehst"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Bildschirmauflösung"</string>
@@ -5871,8 +5876,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Vorschau anzeigen"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Bildschirmschoner auswählen"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Zusätzliche Informationen anzeigen"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Uhrzeit, Wetter oder andere Informationen auf dem Bildschirmschoner anzeigen"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Weitere Einstellungen"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Bildschirmschoner auswählen"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Hier kannst du festlegen, was auf dem Display angezeigt werden soll, wenn das Tablet angedockt ist. Das Gerät verbraucht möglicherweise mehr Strom, wenn ein Bildschirmschoner verwendet wird."</string>
