--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Κατάργηση όλων των δακτυλικών αποτυπωμάτων;"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Διαγραφή <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Θέλετε να διαγράψετε αυτό το δακτυλικό αποτύπωμα;"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Με αυτόν τον τρόπο διαγράφονται οι εικόνες και το μοντέλο δακτυλικού αποτυπώματος που έχουν αποθηκευτεί στη συσκευή σας και συσχετίζονται με το <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Δεν θα μπορείτε να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώσετε το τηλέφωνό σας ή να επαληθεύσετε την ταυτότητά σας σε εφαρμογές."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Με αυτόν τον τρόπο διαγράφονται οι εικόνες και το μοντέλο δακτυλικού αποτυπώματος που έχουν αποθηκευτεί στο τηλέφωνό σας και συσχετίζονται με το <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Με αυτόν τον τρόπο διαγράφονται οι εικόνες και το μοντέλο δακτυλικού αποτυπώματος που έχουν αποθηκευτεί στο tablet και συσχετίζονται με το <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Με αυτόν τον τρόπο διαγράφονται οι εικόνες και το μοντέλο δακτυλικού αποτυπώματος που έχουν αποθηκευτεί στη συσκευή σας και συσχετίζονται με το <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Δεν θα μπορείτε να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώσετε το τηλέφωνό σας ή να επαληθεύσετε την ταυτότητά σας σε εφαρμογές."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Δεν θα μπορείτε να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώσετε το tablet ή να επαληθεύσετε την ταυτότητά σας σε εφαρμογές."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Δεν θα μπορείτε να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώσετε τη συσκευή σας ή να επαληθεύσετε την ταυτότητά σας σε εφαρμογές."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Δεν θα μπορείτε να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώσετε το προφίλ εργασίας σας, να εξουσιοδοτήσετε αγορές ή να συνδεθείτε σε εφαρμογές εργασιών."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Ναι, κατάργηση"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Κρυπτογράφηση"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Ενεργό"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Ενεργό - Βάσει προσώπου"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Ανίχνευση προσώπων"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Αυτόματη προσαρμογή του προσανατολισμού της οθόνης όταν γυρνάτε το τηλέφωνο σε κατακόρυφο ή οριζόντιο προσανατολισμό"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Αυτόματη προσαρμογή του προσανατολισμού της οθόνης όταν γυρνάτε το τηλέφωνο σε κατακόρυφο ή οριζόντιο προσανατολισμό"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Αυτόματη προσαρμογή του προσανατολισμού της οθόνης όταν γυρνάτε το tablet σε κατακόρυφο ή οριζόντιο προσανατολισμό"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Μάθετε περισσότερα σχετικά με την αυτόματη περιστροφή"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Όταν μετακινείτε το τηλέφωνο σε κατακόρυφη ή οριζόντια θέση"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Ανάλυση οθόνης"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Προεπισκόπηση"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Επιλογή προφύλαξης οθόνης"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Εμφάνιση πρόσθετων πληροφοριών"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Προβολή στοιχείων, όπως η ώρα, ο καιρός ή άλλες πληροφορίες, στην προφύλαξη οθόνης"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Περισσότερες ρυθμίσεις"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Επιλογή προφύλαξης οθόνης"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Επιλέξτε τι θα εμφανίζεται στην οθόνη σας όταν το tablet είναι στη βάση σύνδεσης. Η συσκευή σας μπορεί να καταναλώνει περισσότερη ενέργεια όταν χρησιμοποιείται μια προφύλαξη οθόνης."</string>
