--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Poistetaanko kaikki sormenjäljet?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Poista <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Poistetaanko tämä sormenjälki?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Tämä poistaa laitteelle tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Et voi käyttää sormenjälkeäsi puhelimen lukituksen avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Tämä poistaa puhelimelle tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Tämä poistaa tabletille tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Tämä poistaa laitteelle tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Et voi käyttää sormenjälkeäsi puhelimen lukituksen avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Et voi käyttää sormenjälkeäsi puhelimen tabletin avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Et voi käyttää sormenjälkeäsi laitteen lukituksen avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Et voi käyttää sormenjälkeäsi työprofiilin lukituksen avaamiseen, ostosten hyväksymiseen tai työsovelluksiin kirjautumiseen."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Kyllä, poista"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Salaus"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Päällä"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Päällä – kasvojen perusteella"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Kasvojentunnistus"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Mukauta näytön suunta automaattisesti kääntäessäsi puhelimen pystysuunnasta vaakasuuntaan tai toisin päin"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Mukauta näytön suunta automaattisesti kääntäessäsi puhelimen pystysuunnasta vaakasuuntaan tai toisin päin"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Mukauta näytön suunta automaattisesti kääntäessäsi tabletti pystysuunnasta vaakasuuntaan tai toisin päin"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Lue lisää automaattisesta käännöstä"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Kun käännät puhelimen pysty- tai vaaka-asentoon"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Näytön resoluutio"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Esikatsele"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Valitse näytönsäästäjä"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Näytä lisätietoja"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Näytä näytönsäästäjässä kellonaika, sää tai muita tietoja"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Lisää asetuksia"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Valitse näytönsäästäjä"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Valitse, mitä näytölläsi näkyy, kun tabletti ei ole telineessä. Laitteesi saattaa käyttää enemmän virtaa, kun näytönsäästäjä on käytössä."</string>
