--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Հեռացնե՞լ բոլոր մատնահետքերը"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>»-ի ջնջում"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Ջնջե՞լ այս մատնահետքը։"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ հեռախոսն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի հետ կապված պատկերներն ու նմուշը, որոնք պահված են ձեր հեռախոսում, կջնջվեն"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի հետ կապված պատկերներն ու նմուշը, որոնք պահված են ձեր հեռախոսում, կջնջվեն"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ հեռախոսն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ պլանշետն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ պլանշետն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ աշխատանքային պրոֆիլն ապակողպելու, գնումները հաստատելու կամ աշխատանքային հավելվածներ մուտք գործելու համար։"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Այո, հեռացնել"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Գաղտնագրում"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Միացնել"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Միաց․ – Դիմաճանաչման հիման վրա"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Դիմաճանաչում"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Երբ հեռախոսը պտտում եք, էկրանի դիրքն ավտոմատ փոխվում է ուղղաձիգի կամ հորիզոնականի"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Երբ հեռախոսը պտտում եք, էկրանի դիրքն ավտոմատ փոխվում է ուղղաձիգի կամ հորիզոնականի"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Պլանշետը պտտելու դեպքում էկրանի դիրքն ավտոմատ կերպով փոխել ուղղաձիգի կամ հորիզոնականի"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Իմանալ ավելին ինքնապտտման մասին"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Փոխել էկրանի դիրքը ուղղաձիգի/հորիզոնականի՝ հեռախոսը պտտելիս"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Էկրանի լուծաչափը"</string>
@@ -1677,7 +1682,7 @@
     <string name="storage_menu_format" msgid="8903698999905354146">"Ֆորմատավորել SD քարտը որպես շարժական կրիչ"</string>
     <string name="storage_menu_format_button" msgid="7623565190643699626">"Ֆորմատավորել քարտը"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Ձևաչափել որպես դյուրակիր"</string>
-    <string name="storage_menu_format_option" msgid="4886059624052908432">"Ֆորմատավորել"</string>
+    <string name="storage_menu_format_option" msgid="4886059624052908432">"Ֆորմատել"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Տեղափոխել տվյալները"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Հեռացնել"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Կարգավորել"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Նախադիտում"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Ընտրեք էկրանապահ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Ցույց տալ լրացուցիչ տեղեկություններ"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Ցուցադրել ժամը, եղանակը և այլ տեղեկություններ էկրանապահին"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Այլ կարգավորումներ"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Ընտրեք ձեր էկրանապահը"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Ընտրեք, թե ինչ եք ուզում տեսնել ձեր սարքի էկրանին, երբ ձեր պլանշետը դոկ-կայանում է։ Ձեր սարքը կարող է ավելի շատ էներգիա ծախսել, երբ էկրանապահ է օգտագործվում։"</string>
