--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -555,16 +555,12 @@
     <string name="skip_lock_screen_dialog_button_label" msgid="641984698150020591">"Өткізіп жіберу"</string>
     <string name="cancel_lock_screen_dialog_button_label" msgid="1801132985957491690">"Бас тарту"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_title" msgid="886085239313346000">"Сканерді түртіңіз"</string>
-    <!-- no translation found for security_settings_sfps_enroll_find_sensor_title (8327884364635804363) -->
-    <skip />
+    <string name="security_settings_sfps_enroll_find_sensor_title" msgid="8327884364635804363">"Саусағыңызды қуат түймесіне тигізіңіз, бірақ баспаңыз"</string>
     <string name="security_settings_udfps_enroll_find_sensor_title" msgid="8077484429913330179">"Саусақ ізін орнату жолы"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message" msgid="6160543980992596286">"Ол телефонның артында. Сұқ саусақпен түртіңіз."</string>
-    <!-- no translation found for security_settings_sfps_enroll_find_sensor_message (3861487880213212565) -->
-    <skip />
-    <!-- no translation found for security_settings_sfps_enroll_find_sensor_message (700314363994033893) -->
-    <skip />
-    <!-- no translation found for security_settings_sfps_enroll_find_sensor_message (5857063580604638331) -->
-    <skip />
+    <string name="security_settings_sfps_enroll_find_sensor_message" product="tablet" msgid="3861487880213212565">"Саусақ ізін оқу сканері қуат түймесінде орналасқан. Ол – планшеттің шетіндегі шығыңқы дыбыс деңгейі түймесінің жанында орналасқан жалпақ түйме.\n\nҚуат түймесі басылса, экран өшеді."</string>
+    <string name="security_settings_sfps_enroll_find_sensor_message" product="device" msgid="700314363994033893">"Саусақ ізін оқу сканері қуат түймесінде орналасқан. Ол – құрылғының шетіндегі шығыңқы дыбыс деңгейі түймесінің жанында орналасқан жалпақ түйме.\n\nҚуат түймесі басылса, экран өшеді."</string>
+    <string name="security_settings_sfps_enroll_find_sensor_message" product="default" msgid="5857063580604638331">"Саусақ ізін оқу сканері қуат түймесінде орналасқан. Ол – телефонның шетіндегі шығыңқы дыбыс деңгейі түймесінің жанында орналасқан жалпақ түйме.\n\nҚуат түймесі басылса, экран өшеді."</string>
     <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"Саусақ ізін оқу сканері экраныңызда орналасқан. Саусақ ізі келесі экранда суретке түсіріледі."</string>
     <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"Бастау"</string>
     <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"Сканерді табу үшін саусағыңызды экран бойымен жылжытыңыз. Саусақ ізін оқу сканерін басып тұрыңыз."</string>
@@ -576,8 +572,7 @@
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Сканерді түртіңіз"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Саусақты сканерге қойып, дірілді сезгеннен кейін көтеріңіз."</string>
     <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Саусағыңызды сканерде ұстап тұрып, діріл сезілгенде жіберіңіз."</string>
-    <!-- no translation found for security_settings_sfps_enroll_start_message (9054672627477685212) -->
-    <skip />
+    <string name="security_settings_sfps_enroll_start_message" msgid="9054672627477685212">"Түймені баспастан діріл пайда болғанын сезгенше, саусақ ізін датчикте ұстап тұрыңыз.\n\nДірілді сезген сайын саусағыңызды сәл жылжытыңыз. Осы арқылы саусақ ізінің көп бөлігін қамтуға болады."</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Саусақ ізін оқу сканерін басып тұрыңыз"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Саусағыңызды алып, қайта түртіңіз"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Тағы бір рет"</string>
@@ -587,24 +582,17 @@
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Саусағыңыздың ұшын датчикке қойыңыз"</string>
     <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Саусағыңыздың сол жағын қойыңыз"</string>
     <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Саусағыңыздың оң жағын қойыңыз"</string>
-    <!-- no translation found for security_settings_sfps_enroll_finger_center_title (1320688855767675739) -->
-    <skip />
-    <!-- no translation found for security_settings_sfps_enroll_fingertip_title (2737520837684516446) -->
-    <skip />
-    <!-- no translation found for security_settings_sfps_enroll_left_edge_title (9022963735924413343) -->
-    <skip />
-    <!-- no translation found for security_settings_sfps_enroll_right_edge_title (823106857743394392) -->
-    <skip />
+    <string name="security_settings_sfps_enroll_finger_center_title" msgid="1320688855767675739">"Саусағыңыздың ортаңғы бөлігін датчикке қойыңыз"</string>
+    <string name="security_settings_sfps_enroll_fingertip_title" msgid="2737520837684516446">"Саусағыңыздың ұшын датчикке қойыңыз"</string>
+    <string name="security_settings_sfps_enroll_left_edge_title" msgid="9022963735924413343">"Саусағыңыздың сол жағын датчикке қойыңыз"</string>
+    <string name="security_settings_sfps_enroll_right_edge_title" msgid="823106857743394392">"Соңында саусағыңыздың оң жағын датчикке қойыңыз"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Саусақ ізінің бір жағын датчикке қойыңыз, сосын екінші жағына ауысыңыз."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Осы арқылы саусағыңыздың көп бөлігін қамтуға болады."</string>
-    <!-- no translation found for security_settings_sfps_enroll_progress_a11y_message (6450772721691523736) -->
-    <skip />
-    <!-- no translation found for security_settings_sfps_animation_a11y_label (8808819903730940446) -->
-    <skip />
+    <string name="security_settings_sfps_enroll_progress_a11y_message" msgid="6450772721691523736">"Саусақ ізі тіркеліп жатыр: <xliff:g id="PERCENTAGE">%d</xliff:g> пайыз."</string>
+    <string name="security_settings_sfps_animation_a11y_label" msgid="8808819903730940446">"<xliff:g id="PERCENTAGE">%d</xliff:g> пайыз тіркелді"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Саусақ ізі тіркелуде: <xliff:g id="PERCENTAGE">%d</xliff:g> пайыз."</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Саусақ ізі енгізілді"</string>
-    <!-- no translation found for security_settings_sfps_enroll_finish (3948249010300560451) -->
-    <skip />
+    <string name="security_settings_sfps_enroll_finish" msgid="3948249010300560451">"Енді планшет құлпын ашу немесе жеке басыңызды растау үшін (мысалы, қолданбаларға кіргенде немесе бірдеңе сатып алғанда) саусақ ізін пайдалана аласыз."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Енді планшет құлпын ашу немесе жеке басыңызды растау үшін (мысалы, қолданбаларға кіргенде) саусақ ізін пайдалана аласыз."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Енді құрылғы құлпын ашу немесе жеке басыңызды растау үшін (мысалы, қолданбаларға кіргенде) саусақ ізін пайдалана аласыз."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Енді телефон құлпын ашу немесе жеке басыңызды растау үшін (мысалы, қолданбаларға кіргенде) саусақ ізін пайдалана аласыз."</string>
@@ -687,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Барлық саусақ іздері жойылсын ба?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" саусақ ізін жою"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Саусақ ізі жойылсын ба?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Бұл — құрылғыда сақталған \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" саусақ ізімен байланыстырылған саусақ ізі суреттерін және үлгісін жояды."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Телефон құлпын ашу немесе қолданбаларда жеке басыңызды растау үшін саусақ ізін пайдалана алмайсыз."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Мұндайда телефонда сақталған \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" саусақ ізімен байланыстырылған саусақ ізі кескіндері мен үлгісі жойылады."</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Мұндайда планшетте сақталған \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" саусақ ізімен байланыстырылған саусақ ізі кескіндері мен үлгісі жойылады."</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Бұл — құрылғыда сақталған \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" саусақ ізімен байланыстырылған саусақ ізі суреттерін және үлгісін жояды."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Телефон құлпын ашу немесе қолданбаларда жеке басыңызды растау үшін саусақ ізін пайдалана алмайсыз."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Планшет құлпын ашу немесе қолданбаларда жеке басыңызды растау үшін саусақ ізін пайдалана алмайсыз."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Құрылғы құлпын ашу немесе қолданбаларда жеке басыңызды растау үшін саусақ ізін пайдалана алмайсыз."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Жұмыс профилінің құлпын ашу, сатып алу транзакцияларын орындау немесе жұмыс қолданбаларына кіру үшін саусақ ізін пайдалана алмайсыз."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Иә, жойылсын"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Шифрлау"</string>
@@ -1395,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Қосулы"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Қосулы – Бет негізінде"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Бетті анықтау"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Портрет режимі мен альбом режимі арасында ауысқанда, телефонның экраны автоматты түрде бұрылады."</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Портрет режимі мен альбом режимі арасында ауысқанда, телефонның экраны автоматты түрде бұрылады."</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Портреттік және альбомдық режим арасында ауысқанда, планшет экранының бағыты автоматты түрде реттеледі."</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Автоматты бұру туралы толығырақ ақпарат алыңыз."</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Телефонды портрет және альбом режимі арасында ауыстырғанда"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Экран ажыратымдылығы"</string>
@@ -2834,12 +2827,10 @@
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Жоғары батарея шығыны"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Батарея зарядын ең көп шығындайтын қолданбаларды көріңіз."</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"Зарядтау кідіртілді"</string>
-    <!-- no translation found for battery_tip_limited_temporarily_summary (5254922316684499816) -->
-    <skip />
+    <string name="battery_tip_limited_temporarily_summary" msgid="5254922316684499816">"Батареяның қызмет ету мерзімін ұзарту үшін батареяны үнемдеу"</string>
     <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
     <skip />
-    <!-- no translation found for battery_tip_limited_temporarily_sec_button_content_description (5648444926736883551) -->
-    <skip />
+    <string name="battery_tip_limited_temporarily_sec_button_content_description" msgid="5648444926736883551">"Зарядтауды кідірту туралы толық ақпарат алыңыз."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Зарядтауды жалғастыру"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Жоғары температура немесе зарядталу уақыты ұзақ болатын кездердегі сияқты жағдайларда батареяның жұмыс істеу қабілетін сақтау мақсатында зарядтау <xliff:g id="PERCENT">%1$s</xliff:g>-ға шектелуі мүмкін.\n\nБұл жағдайлар аяқталғанда, телефоныңыз автоматты түрде қалыпты күйде зарядтайды."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Жоғары температура немесе зарядталу уақыты ұзақ болатын кездердегі сияқты жағдайларда батареяның жұмыс істеу қабілетін сақтау мақсатында зарядтау <xliff:g id="PERCENT">%1$s</xliff:g>-ға шектелуі мүмкін.\n\nБұл жағдайлар аяқталғанда, телефоныңыз автоматты түрде қалыпты күйде зарядтайды."</string>
@@ -3066,12 +3057,9 @@
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Барлығы: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Фондық режимде: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_screen_footer" product="default" msgid="7899907241146636817">"Батарея шығыны туралы дерек шамамен алынған. Телефон зарядталып жатқанда, шығын өлшенбейді."</string>
-    <!-- no translation found for battery_usage_screen_footer (3729564192877964259) -->
-    <skip />
-    <!-- no translation found for battery_usage_screen_footer (6610974734578869768) -->
-    <skip />
-    <!-- no translation found for battery_usage_screen_footer_empty (3301144846133808193) -->
-    <skip />
+    <string name="battery_usage_screen_footer" product="tablet" msgid="3729564192877964259">"Батарея шығыны туралы деректер шамамен алынған. Планшет зарядталып жатқанда, шығын өлшенбейді."</string>
+    <string name="battery_usage_screen_footer" product="device" msgid="6610974734578869768">"Батарея шығыны туралы деректер шамамен алынған. Құрылғы зарядталып жатқанда, шығын өлшенбейді."</string>
+    <string name="battery_usage_screen_footer_empty" msgid="3301144846133808193">"Батарея шығыны туралы деректер толық зарядталған соң бірнеше сағаттан кейін қолжетімді болады."</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Батарея шығыны диаграммасы"</string>
     <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Күн бойынша көрсетілген батарея шығыны диаграммасы"</string>
     <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Сағат бойынша көрсетілген батарея шығыны диаграммасы"</string>
@@ -5881,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Алдын ала көру"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Скринсейвер таңдау"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Қосымша ақпаратты көрсету"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Скринсейверде уақытты, ауа райын және басқа да ақпаратты көрсету"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Қосымша параметрлер"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Скринсейвер таңдаңыз"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Планшет қондыру станциясына қойылған кезде, экраныңызда ненің көрсетілетінін таңдаңыз. Скринсейвер пайдаланылған кезде құрылғы көбірек қуат тұтынуы мүмкін."</string>
