--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Unataka kuondoa alama zako zote za vidole?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Futa \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Ungependa kufuta alama hii ya kidole?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye kifaa chako"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Hutaweza kutumia alama ya kidole chako kufungua simu yako au kuthibitisha kuwa ni wewe katika programu."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye simu yako"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye kompyuta kibao yako"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye kifaa chako"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Hutaweza kutumia alama ya kidole chako kufungua simu yako au kuthibitisha kuwa ni wewe katika programu."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Hutaweza kutumia alama ya kidole chako kufungua kompyuta kibao yako au kuthibitisha kuwa ni wewe katika programu."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Hutaweza kutumia alama ya kidole chako kufungua kifaa chako au kuthibitisha kuwa ni wewe katika programu."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Hutaweza kutumia alama ya kidole chako kufungua wasifu wako wa kazini, kuidhinisha ununuzi au kuingia katika akaunti za programu za kazini."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Ndiyo, ondoa"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Usimbaji fiche"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Imewashwa"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Imewashwa - Inayolenga nyuso"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Utambuzi wa Nyuso"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Rekebisha mkao wa skrini kiotomatiki unaposogeza simu yako kati ya mkao wima na mlalo"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Rekebisha mkao wa skrini kiotomatiki unaposogeza simu yako kati ya mkao wima na mlalo"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Rekebisha kiotomatiki mkao wa skrini unapobadili kompyuta kibao yako kati ya mkao wima na mlalo"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Pata maelezo zaidi kuhusu kuzungusha skrini kiotomatiki"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Unaposogeza simu yako kati ya mkao wima na mlalo"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Ubora wa skrini"</string>
@@ -5865,8 +5870,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Onyesho la kukagua"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Chagua taswira ya skrini"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Onyesha maelezo ya ziada"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Onyesha vitu kama vile, muda, hali ya hewa au taarifa zingine kwenye taswira ya skrini"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Mipangilio zaidi"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Chagua taswira ya skrini yako"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Chagua utakachokiona kwenye skrini yako wakati kompyuta kibao yako itakapokuwa imeambatishwa. Kifaa chako kinaweza kutumia nishati nyingi zaidi pale taswira ya skrini inapotumika."</string>
