--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"ሁሉም የጣት አሻራዎች ይወገዱ?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>»ን ሰርዝ"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"ይህን የጣት አሻራ መሰረዝ ይፈልጋሉ?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"ይህ በመሣሪያዎ ላይ ከተከማቸው «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» ጋር የተጎዳኙ የጣት አሻራ ምስሎችን እና ሞዴልን ይሰርዛል"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ስልክዎን ለመክፈት ወይም በመተግበሪያዎች ውስጥ እርስዎ መሆንዎን ለማረጋገጥ የጣት አሻራዎን መጠቀም አይችሉም።"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"ይህ በስልክዎ ላይ የተከማቹት የጣት አሻራ ምስሎችን እና ከ«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» ጋር የተጎዳኘውን ሞዴል ይሰርዛል"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"ይህ በጡባዊዎ ላይ የተከማቹት የጣት አሻራ ምስሎችን እና ከ«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» ጋር የተጎዳኘውን ሞዴል ይሰርዛል"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"ይህ በመሣሪያዎ ላይ ከተከማቸው «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» ጋር የተጎዳኙ የጣት አሻራ ምስሎችን እና ሞዴልን ይሰርዛል"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ስልክዎን ለመክፈት ወይም በመተግበሪያዎች ውስጥ እርስዎ መሆንዎን ለማረጋገጥ የጣት አሻራዎን መጠቀም አይችሉም።"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ጡባዊዎን ለመክፈት ወይም በመተግበሪያዎች ውስጥ እርስዎ መሆንዎን ለማረጋገጥ የጣት አሻራዎን መጠቀም አይችሉም።"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"መሣሪያዎን ለመክፈት ወይም በመተግበሪያዎች ውስጥ እርስዎ መሆንዎን ለማረጋገጥ የጣት አሻራዎን መጠቀም አይችሉም።"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"የጣት አሻራዎን ተጠቅመው የስራ መገለጫዎን መክፈት፣ ግዢዎችን ማጽደቅ ወይም ወደ የስራ መተግበሪያዎች መግባት አይችሉም።"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"አዎ፣ አስወግድ"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"ምስጠራ"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"አብራ"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"በርቷል - መልክ ላይ የተመሠረተ"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"መልክ ማወቅ"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"ስልክዎን በቁም ፎቶ እና የመሬት ገጽታዎች መካከል ሲያንቀሳቅሱ የማያ ገጹን አቀማመጠ ገፅ በራስ-ሰር ያስተካክሉ"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"ስልክዎን በቁም ፎቶ እና የመሬት ገጽታዎች መካከል ሲያንቀሳቅሱ የማያ ገጹን አቀማመጠ ገፅ በራስ-ሰር ያስተካክሉ"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"ጡባዊዎን በቁም ፎቶ እና የመሬት ገጽታ መካከል ሲያንቀሳቅሱ የማያ ገጹን አቀማመጠ ገፅ በራስ-ሰር ያስተካክሉ"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"ስለራስ-አዙር የበለጠ ይረዱ"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"ስልክዎን በቁም ፎቶ እና በወርድ መካከል ሲያንቀሳቅሱ"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"የማያ ገጽ ጥራት"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"ቅድመ ዕይታ"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"ማያ ገጽ ማቆያ ይምረጡ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ተጨማሪ መረጃ አሳይ"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"እንደ ጊዜ፣ የአየር ሁኔታ ወይም ሌላ መረጃ ያሉ ነገሮችን በማያ ገጽ ማቆያው ላይ ያሳዩ"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ተጨማሪ ቅንብሮች"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"የእርስዎን የማያ ገጽ ማቆያ ይምረጡ"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"ጡባዊዎ ሲተከል በማያ ገጽዎ ላይ የሚያዩትን ይምረጡ። የማያ ገጽ ማቆያ ስራ ላይ ሲውል መሣሪያዎ የበለጠ ኃይል ሊጠቀም ይችላል።"</string>
