--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Vols suprimir totes les empremtes digitals?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Suprimeix \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Vols suprimir aquesta empremta digital?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Aquesta acció suprimeix les imatges i el model d\'empremta digital associats a <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, que estan emmagatzemats al teu dispositiu"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"No podràs utilitzar l\'empremta digital per desbloquejar el telèfon o verificar la teva identitat en aplicacions."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Aquesta acció suprimeix les imatges i el model d\'empremta digital associats a <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, que estan emmagatzemats al teu telèfon"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Aquesta acció suprimeix les imatges i el model d\'empremta digital associats a <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, que estan emmagatzemats a la teva tauleta"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Aquesta acció suprimeix les imatges i el model d\'empremta digital associats a <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, que estan emmagatzemats al teu dispositiu"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"No podràs utilitzar l\'empremta digital per desbloquejar el telèfon o verificar la teva identitat en aplicacions."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"No podràs utilitzar l\'empremta digital per desbloquejar la tauleta o verificar la teva identitat en aplicacions."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"No podràs utilitzar l\'empremta digital per desbloquejar el dispositiu o verificar la teva identitat en aplicacions."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"No podràs utilitzar l\'empremta digital per desbloquejar el teu perfil de treball, autoritzar compres ni iniciar la sessió en aplicacions de treball."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Sí, suprimeix"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Encriptació"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Activat"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Activat: basat en cares"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Detecció facial"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Ajusta l\'orientació de la pantalla automàticament quan canvies entre el mode vertical i horitzontal al telèfon"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Ajusta l\'orientació de la pantalla automàticament quan canvies entre el mode vertical i horitzontal al telèfon"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Ajusta l\'orientació de la pantalla automàticament quan canvies entre el mode vertical i horitzontal a la tauleta"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Més informació sobre el gir automàtic"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Quan canvies entre el mode vertical i horitzontal al telèfon"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Resolució de pantalla"</string>
@@ -5637,7 +5642,7 @@
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Targetes i passis"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"targetes i passis"</string>
     <string name="power_menu_setting_name" msgid="2394440932633137229">"Mantén premut el botó d\'engegada"</string>
-    <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Mantén premut el botó d\'engegada per accedir"</string>
+    <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Mantén premut el botó d\'engegada per accedir a:"</string>
     <string name="power_menu_long_press_for_power_menu_title" msgid="477584639843663599">"Menú d\'engegada"</string>
     <string name="power_menu_long_press_for_assistant_title" msgid="6557738348262616455">"Assistent digital"</string>
     <string name="power_menu_summary_long_press_for_assistant" msgid="32706459458422952">"Accés a l\'assistent digital"</string>
@@ -5645,8 +5650,8 @@
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Per utilitzar aquesta opció, has de definir un bloqueig de pantalla"</string>
     <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Menú d\'engegada:\nPrem el botó d\'engegada i el d\'apujar el volum a la vegada"</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Impedeix els sons:\nPrem un botó de volum per fer servir la drecera"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Durada de mantenir premut"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Tria quanta estona vols mantenir premut el botó d\'engegada per ajustar la sensibilitat"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Durada de la pulsació"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Tria la durada de l\'interval de pulsació del botó d\'engegada per ajustar la sensibilitat"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Curt"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Llarg"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Mostra la cartera"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Previsualitza"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Tria un estalvi de pantalla"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Mostra informació addicional"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Mostra informació com ara l\'hora, el temps o altres dades a l\'estalvi de pantalla"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Més opcions de configuració"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Tria l\'estalvi de pantalla"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Tria què vols veure a la pantalla quan la tauleta estigui acoblada. És possible que el dispositiu utilitzi més energia si es fa servir un estalvi de pantalla."</string>
