--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Quitar as impresións dixitais?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Eliminar \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Queres eliminar esta impresión dixital?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados no teu dispositivo"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Non poderás utilizar a impresión dixital para desbloquear o teléfono nin para verificar a túa identidade nas aplicacións."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados no teléfono"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados na tableta"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados no teu dispositivo"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Non poderás utilizar a impresión dixital para desbloquear o teléfono nin para verificar a túa identidade nas aplicacións."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Non poderás utilizar a impresión dixital para desbloquear a tableta nin para verificar a túa identidade nas aplicacións."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Non poderás utilizar a impresión dixital para desbloquear o dispositivo nin para verificar a túa identidade nas aplicacións."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Non poderás utilizar a impresión dixital para desbloquear o perfil de traballo, autorizar compras nin iniciar sesión nas aplicacións de traballo."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Si, quitar"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Encriptación"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Si"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Activada: baseada na cara"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Detección facial"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Axustar automaticamente a orientación da pantalla cando cambies o teléfono entre o modo vertical e o horizontal"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Axustar automaticamente a orientación da pantalla cando cambies o teléfono entre o modo vertical e o horizontal"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Axusta automaticamente a orientación da pantalla cando cambies a tableta entre o modo vertical e o horizontal"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Máis información sobre xirar automaticamente"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Cando cambias o teléfono do modo vertical ao horizontal"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Resolución da pantalla"</string>
@@ -5636,7 +5641,7 @@
     <string name="quick_controls_lower" msgid="6675573610027367819">"control de dispositivos"</string>
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Tarxetas e pases"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"tarxetas e pases"</string>
-    <string name="power_menu_setting_name" msgid="2394440932633137229">"Manter premido botón de acendido"</string>
+    <string name="power_menu_setting_name" msgid="2394440932633137229">"Manter premido o botón de acendido"</string>
     <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Mantén premido o botón de acendido para acceder ao menú"</string>
     <string name="power_menu_long_press_for_power_menu_title" msgid="477584639843663599">"Menú de acendido"</string>
     <string name="power_menu_long_press_for_assistant_title" msgid="6557738348262616455">"Asistente dixital"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Vista previa"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Escolle un protector de pantalla"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Mostrar información adicional"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Mostra a hora, o tempo ou outra información no protector de pantalla"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Máis opcións de configuración"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Escolle o protector de pantalla"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Escolle o que aparecerá na pantalla cando a tableta estea na súa base. Pode que o dispositivo utilice máis enerxía se se usa un protector de pantalla."</string>
