--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -681,8 +681,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Želite li ukloniti sve otiske prstiju?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Izbrišite <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Želite li izbrisati taj otisak prsta?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i koji su pohranjeni na vašem uređaju"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Otiskom prsta nećete moći otključati telefon niti potvrditi svoj identitet u aplikacijama."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i pohranjeni na vašem telefonu"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i pohranjeni na vašem tabletu"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i koji su pohranjeni na vašem uređaju"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Otiskom prsta nećete moći otključati telefon niti potvrditi svoj identitet u aplikacijama."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Otiskom prsta nećete moći otključati tablet niti potvrditi da ste to vi u aplikacijama."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Otiskom prsta nećete moći otključati uređaj niti potvrditi da ste to vi u aplikacijama."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Otiskom prsta nećete moći otključati poslovni profil, autorizirati kupnje niti se prijaviti u poslovne aplikacije."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Da, ukloni"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Šifriranje"</string>
@@ -1405,7 +1409,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Uključeno"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Uključeno – na temelju lica"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Prepoznavanje lica"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Usmjerenje zaslona automatski se prilagođava ovisno je li telefon u okomitom ili vodoravnom položaju"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Usmjerenje zaslona automatski se prilagođava ovisno je li telefon u okomitom ili vodoravnom položaju"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Usmjerenje zaslona automatski se prilagođava ovisno o tome je li tablet u okomitom ili vodoravnom položaju"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Saznajte više o automatskom zakretanju"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Kad izmjenjujete prikaz zaslona između okomitog i vodoravnog"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Razlučivost zaslona"</string>
@@ -5726,7 +5731,7 @@
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Kartice i propusnice"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"kartice i propusnice"</string>
     <string name="power_menu_setting_name" msgid="2394440932633137229">"Pritisnite i zadržite tipku za uključivanje/isključivanje"</string>
-    <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Pritisnite i zadržite tipku za uklj./isklj. za pristup"</string>
+    <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Za pristup pritisnite i zadržite tipku za uklj./isklj."</string>
     <string name="power_menu_long_press_for_power_menu_title" msgid="477584639843663599">"Izbornik tipke za uključivanje (/isključivanje)"</string>
     <string name="power_menu_long_press_for_assistant_title" msgid="6557738348262616455">"Digitalni asistent"</string>
     <string name="power_menu_summary_long_press_for_assistant" msgid="32706459458422952">"Pristupi digitalnom asistentu"</string>
@@ -5734,8 +5739,8 @@
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Za upotrebu najprije postavite zaključavanje zaslona"</string>
     <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Izbornik tipke za uključivanje (/isključivanje):\nistodobno pritisnite tipku za uključivanje/isključivanje i gumb za pojačavanje glasnoće"</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Sprječavanje zvonjenja:\nza prečac pritisnite gumb za glasnoću"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Trajanje pritiska i zadržavanja tipke"</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Prilagodite osjetljivost tako što ćete odabrati duljinu pritiska i zadržavanja tipke za uključivanje/isključivanje"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Trajanje zadržavanja tipke"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Prilagodite osjetljivost odabirom trajanja zadržavanja tipke za uključivanje/isključivanje"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Kratko"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Dugo"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Prikaži novčanik"</string>
@@ -5953,8 +5958,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Pregled"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Odabir čuvara zaslona"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Prikaz dodatnih informacija"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Na čuvaru zaslona prikazujte vrijeme, vremenske uvjete i druge informacije"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Više postavki"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Odaberite čuvar zaslona"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Odaberite što će se prikazivati na zaslonu kad se tablet nalazi na priključnoj stanici. Uređaj može trošiti više energije kad se koristi čuvar zaslona."</string>
