--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Fjarlægja öll fingraför?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Eyða „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Viltu eyða þessu fingrafari?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Þetta eyðir fingrafaramyndum og -líkani sem tengjast „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ og eru vistuð í tækinu"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Þú munt ekki geta notað fingrafarið þitt til að opna símann eða staðfesta hver þú ert í forritum."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Þetta eyðir fingrafaramyndum og -líkani sem tengist „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ og er vistað í símanum"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Þetta eyðir fingrafaramyndum og -líkani sem tengist „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ og er vistað í spjaldtölvunni"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Þetta eyðir fingrafaramyndum og -líkani sem tengjast „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ og eru vistuð í tækinu"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Þú munt ekki geta notað fingrafarið þitt til að opna símann eða staðfesta hver þú ert í forritum."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Þú munt ekki geta notað fingrafarið þitt til að opna spjaldtölvuna eða staðfesta hver þú ert í forritum."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Þú munt ekki geta notað fingrafarið þitt til að opna tækið eða staðfesta hver þú ert í forritum."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Þú munt ekki geta notað fingrafarið þitt til að taka vinnusniðið úr lás, heimila kaup eða skrá þig inn í vinnuforrit."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Já, fjarlægja"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Dulkóðun"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Kveikt"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Kveikt – út frá andliti"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Andlitsgreining"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Aðlaga skjástefnuna sjálfkrafa þegar þú skiptir á milli skammsniðs og langsniðs í símanum"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Aðlaga skjástefnuna sjálfkrafa þegar þú skiptir á milli skammsniðs og langsniðs í símanum"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Aðlaga skjástefnuna sjálfkrafa þegar þú skiptir á milli skammsniðs og langsniðs í spjaldtölvunni"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Nánar um sjálfvirkan snúning"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Þegar þú skiptir á milli skammsniðs og langsniðs í símanum"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Skjáupplausn"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Forskoða"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Velja skjávara"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Sýna viðbótarupplýsingar"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Birtu atriði á borð við tíma, veður og aðrar upplýsingar á skjávaranum"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Fleiri stillingar"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Velja skjávara"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Veldu það sem á að birta á skjánum á meðan spjaldtölvan er í dokkunni. Tækið kann að nota meiri orku þegar skjávarinn er notaður."</string>
