--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Rimuovere tutte le impronte?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Elimina \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Vuoi eliminare questa impronta?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Vengono eliminati il modello e le immagini dell\'impronta associati a \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" e memorizzati sul dispositivo"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Non potrai usare la tua impronta per sbloccare il telefono o verificare la tua identità nelle app."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Vengono eliminati il modello e le immagini dell\'impronta associati a \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" e memorizzati sul telefono"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Vengono eliminati il modello e le immagini dell\'impronta associati a \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" e memorizzati sul tablet"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Vengono eliminati il modello e le immagini dell\'impronta associati a \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" e memorizzati sul dispositivo"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Non potrai usare la tua impronta per sbloccare il telefono o verificare la tua identità nelle app."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Non potrai usare la tua impronta per sbloccare il tablet o verificare la tua identità nelle app."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Non potrai usare la tua impronta per sbloccare il dispositivo o verificare la tua identità nelle app."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Non potrai utilizzare la tua impronta per sbloccare il profilo di lavoro, autorizzare gli acquisti o accedere alle app di lavoro."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Sì, rimuovi"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Crittografia"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"On"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"On - Rotazione basata sul viso"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Riconoscimento facciale"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Regola l\'orientamento dello schermo in maniera automatica quando passi dalla posizione verticale a quella orizzontale e viceversa"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Regola l\'orientamento dello schermo in maniera automatica quando passi dalla posizione verticale a quella orizzontale e viceversa"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Regola l\'orientamento dello schermo in maniera automatica quando passi dalla posizione verticale a quella orizzontale del tablet e viceversa"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Scopri di più sulla rotazione automatica"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Quando ruoti il telefono in orizzontale e verticale"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Risoluzione dello schermo"</string>
@@ -5643,8 +5648,8 @@
     <string name="power_menu_summary_long_press_for_assistant" msgid="32706459458422952">"Accedi all\'assistente digitale"</string>
     <string name="power_menu_summary_long_press_for_power_menu" msgid="7617247135239683710">"Accedi al menu del tasto di accensione"</string>
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Per usare questa opzione, imposta prima un blocco schermo"</string>
-    <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Menu del tasto di accensione:\nPremi contemporaneamente il tasto di accensione e il pulsante Alza il volume"</string>
-    <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Disattiva suoneria:\nPremi un pulsante del volume per usare la scorciatoia"</string>
+    <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Menu del tasto di accensione:\nPremi contemporaneamente il tasto di accensione e il tasto Alza il volume"</string>
+    <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Disattiva suoneria:\nPremi un tasto del volume per usare la scorciatoia"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Durata pressione"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Regola la sensibilità scegliendo la durata della pressione del tasto di accensione"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Breve"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Anteprima"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Scegli un salvaschermo"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Mostra informazioni aggiuntive"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Mostra sul salvaschermo elementi come l\'orario, il meteo o altre informazioni"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Altre impostazioni"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Scegli il salvaschermo"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Scegli cosa visualizzare sullo schermo quando il tablet è inserito nel dock. Il dispositivo potrebbe consumare più energia quando viene usato un salvaschermo."</string>
