--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -687,8 +687,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"להסיר את כל טביעות האצבע?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"מחיקה של \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"למחוק את טביעת האצבע הזו?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"פעולה זו מוחקת את התבנית והתמונות של טביעת האצבע המשויכות אל <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, שמאוחסנות במכשיר שלך"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"לא תהיה לך אפשרות להשתמש בטביעת האצבע כדי לבטל את הנעילה של הטלפון או לאמת את הזהות שלך באפליקציות."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"הפעולה הזו מוחקת את התבנית והתמונות של טביעת האצבע המשויכות אל <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, שמאוחסנות בטלפון שלך"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"הפעולה הזו מוחקת את התבנית והתמונות של טביעת האצבע המשויכות אל <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, שמאוחסנות בטאבלט שלך"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"פעולה זו מוחקת את התבנית והתמונות של טביעת האצבע המשויכות אל <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, שמאוחסנות במכשיר שלך"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"לא תהיה לך אפשרות להשתמש בטביעת האצבע כדי לבטל את הנעילה של הטלפון או לאמת את הזהות שלך באפליקציות."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"לא תהיה לך אפשרות להשתמש בטביעת האצבע כדי לבטל את הנעילה של הטאבלט או לאמת את זהותך באפליקציות."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"לא תהיה לך אפשרות להשתמש בטביעת האצבע כדי לבטל את הנעילה של המכשיר או לאמת את זהותך באפליקציות."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"לא תהיה לך אפשרות להשתמש בטביעת האצבע כדי לבטל את נעילת פרופיל העבודה שלך, לאשר רכישות או להיכנס לאפליקציות לעבודה."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"כן, להסיר"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"הצפנה"</string>
@@ -1427,7 +1431,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"פועל"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"פועל – מבוסס על זיהוי פנים"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"זיהוי פנים"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"שינוי אוטומטי של כיוון המסך כשהופכים את הטלפון ממצב של תצוגה לאורך למצב של תצוגה לרוחב"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"שינוי אוטומטי של כיוון המסך כשהופכים את הטלפון ממצב של תצוגה לאורך למצב של תצוגה לרוחב"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"שינוי אוטומטי של כיוון המסך כשהופכים את הטאבלט ממצב של תצוגה לאורך למצב של תצוגה לרוחב"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"מידע נוסף על הסיבוב האוטומטי"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"בעת הזזת הטלפון ממצב \'לאורך\' למצב \'לרוחב\' ולהיפך"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"רזולוציית המסך"</string>
