--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Манжа издерин өчүрөсүзбү?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Өчүрүү: <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Бул манжа изин өчүрөсүзбү?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ушуну менен түзмөгүңүздөгү \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Манжаңыздын изи менен телефонуңуздун кулпусун ача албай, колдонмолорго кирүүдө өзүңүздү ырастай албай каласыз."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Ушуну менен телефонуңуздагы \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Ушуну менен планшетиңиздеги \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Ушуну менен түзмөгүңүздөгү \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Манжаңыздын изи менен телефонуңуздун кулпусун ача албай, колдонмолорго кирүүдө өзүңүздү ырастай албай каласыз."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Планшетиңиздин кулпусун ачып же колдонмолордо сиз экениңизди ырастоо үчүн манжа изин колдоно албай каласыз."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Түзмөгүңүздүн кулпусун ачып же колдонмолордо сиз экениңизди ырастоо үчүн манжа изин колдоно албай каласыз."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Манжаңыздын изи менен жумуш профилиңиздин кулпусун ача албай, эч нерсе сатып ала албай, колдонмолорго кирүүдө өзүңүздү ырастай албай каласыз."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Ооба, өчүрөм"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Шифрлөө"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Күйүк"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Күйүк – Жүздүн негизинде"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Жүздү аныктоо"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Телефонду ары-бери бурганда экраны автоматтык түрдө тигинен туурасына которулат"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Телефонду ары-бери бурганда экраны автоматтык түрдө тигинен туурасына которулат"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Планшетти ары-бери бурганда экраны автоматтык түрдө тигинен жана туурасына которулат"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Автоматтык түрдө бурулуу жөнүндө кененирээк маалымат"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Телефонду тигинен же туурасынан кармаганда"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Экрандын дааналыгы"</string>
@@ -5637,7 +5642,7 @@
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Карталар жана билеттер"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"карталар жана билеттер"</string>
     <string name="power_menu_setting_name" msgid="2394440932633137229">"Кубат баскычын коё бербей басуу"</string>
-    <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Мүмкүнчүлүк алуу үчүн кубат баскычын коё бербей басып туруу"</string>
+    <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Кубат баскычын бир топко басканда эмне ачыларын тандаңыз"</string>
     <string name="power_menu_long_press_for_power_menu_title" msgid="477584639843663599">"Кубат баскычынын менюсу"</string>
     <string name="power_menu_long_press_for_assistant_title" msgid="6557738348262616455">"Санариптик жардамчы"</string>
     <string name="power_menu_summary_long_press_for_assistant" msgid="32706459458422952">"Санариптик жардамчыга мүмкүнчүлүк алуу"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Алдын-ала көрүү"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Көшөгөнү тандаңыз"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Кошумча маалыматты көрсөтүү"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Убакытты, аба ырайын же башка маалыматты көшөгөдө көрсөтүү"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Дагы параметрлер"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Көшөгөнү тандаңыз"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Планшет туташтырылып турганда анын экранында эмне көрсөтүлөрүн тандаңыз. Көшөгө колдонулганда түзмөктүн батареясы көбүрөөк сарпталышы мүмкүн."</string>
