--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -683,8 +683,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Pašalinti visus kontrolinius kodus?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Ištrinti „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Ar norite ištrinti šį piršto antspaudą?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Bus ištrinti įrenginyje saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte telefoną ar patvirtintumėte savo tapatybę programose."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Bus ištrinti telefone saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Bus ištrinti planšetiniame kompiuteryje saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Bus ištrinti įrenginyje saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte telefoną ar patvirtintumėte savo tapatybę programose."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte planšetinį kompiuterį ar patvirtintumėte savo tapatybę programose."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte įrenginį ar patvirtintumėte savo tapatybę programose."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte darbo profilį, įgaliotumėte pirkimo operacijas ar prisijungtumėte prie darbo programų."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Taip, pašalinti"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Šifruotė"</string>
@@ -1423,7 +1427,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Įjungta"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Įjungta – pagal veidą"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Veido aptikimas"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Automatiškai koreguokite ekrano orientaciją perjungdami telefono statųjį ir gulsčiąjį režimus"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Automatiškai koreguokite ekrano orientaciją perjungdami telefono statųjį ir gulsčiąjį režimus"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Automatiškai koreguokite ekrano orientaciją perjungdami planšetinio kompiuterio statųjį ir gulsčiąjį režimus"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Sužinokite daugiau apie automatinį pasukimą"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Kai pasukate telefoną stačiai ar gulsčiai"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Ekrano skyra"</string>
@@ -6038,8 +6043,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Peržiūrėti"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Ekrano užsklandos pasirinkimas"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Papildomos informacijos rodymas"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Rodyti tokią informaciją kaip laikas, orai ir pan. ekrano užsklandoje"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Daugiau nustatymų"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Ekrano užsklandos pasirinkimas"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Pasirinkite, kas bus rodoma ekrane, kai planšetinis kompiuteris bus prijungtas prie doko. Naudojant ekrano užsklandą gali būti eikvojama daugiau įrenginio energijos."</string>
