--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Remover todas as impressões digitais?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Elimine \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Eliminar esta impressão digital?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Esta ação elimina as imagens da impressão digital e o modelo associado ao \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" que estão armazenados no dispositivo"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Não poderá utilizar a sua impressão digital para desbloquear o telemóvel ou validar a sua identidade nas apps."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Esta ação elimina as imagens da impressão digital e o modelo associado ao \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" que estão armazenados no telemóvel"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Esta ação elimina as imagens da impressão digital e o modelo associado ao \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" que estão armazenados no tablet"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Esta ação elimina as imagens da impressão digital e o modelo associado ao \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" que estão armazenados no dispositivo"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Não poderá utilizar a sua impressão digital para desbloquear o telemóvel ou validar a sua identidade nas apps."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Não vai poder usar a sua impressão digital para desbloquear o tablet ou validar a sua identidade nas apps."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Não vai poder usar a sua impressão digital para desbloquear o dispositivo ou validar a sua identidade nas apps."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Não poderá utilizar a sua impressão digital para desbloquear o perfil de trabalho, autorizar compras ou iniciar sessão nas apps de trabalho."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Sim, remover"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Encriptação"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Ativado"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Ativada – Com base no rosto"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Deteção facial"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Ajuste automaticamente a orientação do ecrã quando move o telemóvel entre o modo vertical e horizontal"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Ajuste automaticamente a orientação do ecrã quando move o telemóvel entre o modo vertical e horizontal"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Ajuste automaticamente a orientação do ecrã quando move o tablet entre o modo vertical e horizontal"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Saiba mais sobre a rotação automática"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Quando move o telemóvel entre o modo vertical e horizontal"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Resolução de ecrã"</string>
@@ -5643,8 +5648,8 @@
     <string name="power_menu_summary_long_press_for_assistant" msgid="32706459458422952">"Aceda ao assistente digital"</string>
     <string name="power_menu_summary_long_press_for_power_menu" msgid="7617247135239683710">"Aceda ao menu ligar/desligar"</string>
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Para utilizar, defina primeiro um bloqueio de ecrã"</string>
-    <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Menu ligar/desligar:\nprima os botões ligar/desligar e aumentar volume em simultâneo"</string>
-    <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Impedir o toque:\nprima um botão de volume para o atalho"</string>
+    <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Menu ligar/desligar:\nPrima os botões ligar/desligar e aumentar volume em simultâneo"</string>
+    <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Impedir o toque:\nPrima um botão de volume para o atalho"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Duração de premir sem soltar"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Ajuste a sensibilidade ao escolher durante quanto tempo o botão ligar/desligar deve ser premido sem soltar"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Curta"</string>
