--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -685,8 +685,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Elimini toate amprentele?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Șterge <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Doriți să ștergeți această amprentă?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Astfel, imaginile amprentelor și modelul de amprentă asociate cu <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> stocate pe acest dispozitiv vor fi șterse"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Nu vei putea să folosești amprenta pentru a-ți debloca telefonul sau pentru a-ți confirma identitatea în aplicații."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Astfel, imaginile amprentelor și modelul de amprentă asociate cu <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> stocate pe telefon vor fi șterse"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Astfel, imaginile amprentelor și modelul de amprentă asociate cu <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> stocate pe tabletă vor fi șterse"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Astfel, imaginile amprentelor și modelul de amprentă asociate cu <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> stocate pe acest dispozitiv vor fi șterse"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Nu vei putea să folosești amprenta pentru a-ți debloca telefonul sau pentru a-ți confirma identitatea în aplicații."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Nu vei putea folosi amprenta pentru a debloca tableta sau pentru a-ți confirma identitatea în aplicații."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Nu vei putea folosi amprenta pentru a debloca dispozitivul sau pentru a-ți confirma identitatea în aplicații."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Nu vei putea să folosești amprenta ca să deblochezi profilul de serviciu, să autorizezi achiziții sau să te conectezi la aplicațiile pentru lucru."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Da, elimină"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Criptare"</string>
@@ -1409,7 +1413,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Activată"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Activată – În funcție de chip"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Detectare facială"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Ajustează automat orientarea ecranului când comuți telefonul între modul Portret și modul Peisaj"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Ajustează automat orientarea ecranului când comuți telefonul între modul Portret și modul Peisaj"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Ajustează automat orientarea ecranului când schimbi între modul Portret și modul Peisaj pe tabletă"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Aflați mai multe despre rotirea automată"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Când comuți telefonul între orientările portret și peisaj"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Rezoluția ecranului"</string>
@@ -5959,8 +5964,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Previzualizează"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Alege un screensaver"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Afișează informații suplimentare"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Afișează informații cum ar fi ora, condițiile meteo sau altele pe screensaver"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Mai multe setări"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Alegeți screensaverul"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Alege ce vei vedea pe ecran când tableta este andocată. Dispozitivul poate consuma mai multă energie când folosește un screensaver."</string>
