--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -689,8 +689,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Odstrániť všetky odtlačky prstov?"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Odstráňte odtlačok <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Chcete tento odtlačok prsta odstrániť?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Týmto odstránite snímky a model odtlačku prsta „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“, ktoré sú uložené vo vašom zariadení."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Nebudete môcť odomykať telefón ani overovať svoju totožnosť v aplikáciách odtlačkom prsta."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Týmto odstránite obrázky a model odtlačku prsta spojené s identifikátorom <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, ktoré sú uložené vo vašom telefóne"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Týmto odstránite obrázky a model odtlačku prsta spojené s identifikátorom <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, ktoré sú uložené vo vašom tablete"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Týmto odstránite snímky a model odtlačku prsta „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“, ktoré sú uložené vo vašom zariadení."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Nebudete môcť odomykať telefón ani overovať svoju totožnosť v aplikáciách odtlačkom prsta."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"V aplikáciách nebudete môcť odomykať tablet ani overovať svoju totožnosť odtlačkom prsta."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"V aplikáciách nebudete môcť odomykať zariadenie ani overovať svoju totožnosť odtlačkom prsta."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Nebudete môcť odomykať pracovný profil, schvaľovať nákupy ani sa prihlasovať do pracovných aplikácií odtlačkom prsta."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Áno, odstrániť"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Šifrovanie"</string>
@@ -1429,7 +1433,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Zapnuté"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Zapnuté – podľa tváre"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"Rozpoznávanie tváre"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"Automaticky meniť orientáciu obrazovky, keď telefón otočíte na výšku alebo na šírku"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"Automaticky meniť orientáciu obrazovky, keď telefón otočíte na výšku alebo na šírku"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"Automatická úprava orientácie obrazovky pri otáčaní tabletu na výšku alebo šírku"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"Ďalšie informácie o automatickom otáčaní"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"Keď telefón otočíte z režimu na výšku do režimu na šírku"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"Rozlíšenie obrazovky"</string>
@@ -6044,8 +6049,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Zobraziť ukážku"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"Výber šetriča obrazovky"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Zobrazovať ďalšie informácie"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Zobrazte si napríklad čas, počasie a ďalšie informácie v rámci šetriča obrazovky"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Ďalšie nastavenia"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"Výber šetriča obrazovky"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"Vyberte, čo sa bude zobrazovať na vašej obrazovke po vložení tabletu do doku. Zariadenie môže pri používaní šetriča obrazovky spotrebúvať viac energie."</string>
