--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -675,8 +675,12 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"تمام فنگر پرنٹس ہٹائیں؟"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' حذف کریں"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"کیا آپ یہ فنگر پرنٹ حذف کرنا چاہتے ہیں؟"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"اس سے آپ کے آلے پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"اپنا فون غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"اس سے آپ کے فون پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"اس سے آپ کے ٹیبلیٹ پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"اس سے آپ کے آلے پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"اپنا فون غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"اپنا ٹیبلیٹ غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"اپنا آلہ غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"آپ اپنی دفتری پروفائل کو غیر مقفل کرنے، خریداریوں کی اجازت دینے یا ورک ایپس میں سائن ان کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"جی ہاں، ہٹائیں"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"مرموز کاری"</string>
@@ -1383,7 +1387,8 @@
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"آن"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"آن - چہرے پر مبنی"</string>
     <string name="auto_rotate_switch_face_based" msgid="9116123744601564320">"چہرے کی شناخت"</string>
-    <string name="auto_rotate_screen_summary" msgid="4547268203621754096">"اپنا فون پورٹریٹ اور لینڈ اسکیپ کے درمیان گھماتے وقت، خودکار طور پر اسکرین کی سمت بندی ایڈجسٹ کریں"</string>
+    <string name="auto_rotate_screen_summary" product="default" msgid="4547268203621754096">"اپنا فون پورٹریٹ اور لینڈ اسکیپ کے درمیان گھماتے وقت، خودکار طور پر اسکرین کی سمت بندی ایڈجسٹ کریں"</string>
+    <string name="auto_rotate_screen_summary" product="tablet" msgid="2148040599220623607">"اپنا ٹیبلیٹ پورٹریٹ اور لینڈ اسکیپ کے درمیان گھماتے وقت، خودکار طور پر اسکرین کی سمت بندی ایڈجسٹ کریں"</string>
     <string name="auto_rotate_link_a11y" msgid="5146188567212233286">"\'خودکار طور پر گھمائیں\' کے بارے میں مزید جانیں"</string>
     <string name="auto_rotate_summary_a11y" msgid="1505094100328581685">"جب آپ اپنا فون پورٹریٹ اور لینڈ اسکیپ کے درمیان گھماتے ہیں"</string>
     <string name="screen_resolution_title" msgid="2690518693139811486">"اسکرین ریزولیوشن"</string>
@@ -5864,8 +5869,7 @@
     <string name="dream_preview_button_title" msgid="6637456541851795952">"پیش منظر"</string>
     <string name="dream_picker_category" msgid="7726447836872744867">"اسکرین سیور منتخب کریں"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"اضافی معلومات دکھائیں"</string>
-    <!-- no translation found for dream_complications_toggle_summary (8088911054987524904) -->
-    <skip />
+    <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"اسکرین سیور پر وقت، موسم یا دیگر معلومات جیسی چیزیں ڈسپلے کریں"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"مزید ترتیبات"</string>
     <string name="dream_setup_title" msgid="2458303874255396142">"اپنا اسکرین سیور منتخب کریں"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"منتخب کریں کہ آپ کے ٹیبلیٹ کو ڈاک سے منسلک کئے جانے پر آپ کو اپنی اسکرین پر کیا دکھائی دے۔ اسکرین سیور کا استعمال کرنے پر آپ کا آلہ زیادہ توانائی استعمال کر سکتا ہے۔"</string>
